Update hero section title from 'KING OF SOLANA' to 'KING OF BULUS'

--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
 
 <section class="hero">  
     <div class="glow-bg"></div>  
-    <div class="tag-king">👑 KING OF SOLANA</div>  
+    <div class="tag-king">👑 KING OF BULUS </div>  
     <h1>THE KING <br> <span class="text-gradient">IS COMING</span></h1>  
     <p>  
         Slow steady wins the race. We don't chase pumps, we build empires. Join the community before launch! 🚀  
