Refactor contract address display styles

--- a/index.html
+++ b/index.html
@@ -292,21 +292,31 @@
         OFFICIAL CONTRACT ADDRESS:
     </p>
 
+    <div style="margin-top: 15px; margin-bottom: 15px; text-align: center;">
+
+    <p style="color: #fbbf24; font-weight: bold; margin-bottom: 3px; font-size: 0.7rem; letter-spacing: 0.5px;">
+        CONTRACT ADDRESS
+    </p>
+
     <div style="
-        background: linear-gradient(45deg, #facc15, #eab308); /* Warna Kuning Emas Mencolok */
-        color: #000000; /* Teks Hitam supaya kontras */
-        padding: 15px 25px;
-        border-radius: 12px;
-        border: 3px solid #ffffff; /* Garis tepi putih */
-        font-weight: 900; /* Font sangat tebal */
-        font-family: monospace; /* Font gaya coding */
-        font-size: 1.1rem; /* Ukuran font agak besar */
+        background: #facc15;
+        color: #000;
+        padding: 4px 10px; /* Jarak dalam diperkecil */
+        border-radius: 6px;
+        border: 1.5px solid #fff;
+        font-weight: bold;
+        font-family: monospace;
+        font-size: 0.75rem; /* Ukuran font diperkecil */
         display: inline-block;
-        box-shadow: 0 0 25px rgba(234, 179, 8, 0.7); /* Efek cahaya/glowing */
-        cursor: pointer;
-        user-select: all; /* Supaya sekali klik langsung ke-blok semua */
+        box-shadow: 0 0 10px rgba(234, 179, 8, 0.4);
+        max-width: 90%;
+        word-break: break-all;
     ">
         CA: 8sF...GANTI_DENGAN_CA_ASLI_DISINI...xyz
+    </div>
+
+</div>
+
     </div>
 
 </div>
