Update NFT/Game Utility to NFT Ecosystem Exploration

--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
                 <h3 class="phase-title meme-font text-blue">PHASE 4</h3>  
                 <ul class="phase-list">  
                     <li>50K - 100K+ Holders</li>  
-                    <li>NFT/Game Utility</li>  
+                    <li>NFT Ecosystem Exploration & Community Utility”</li>  
                     <li>potential CEX Listing</li>  
                     <li>Partnerships</li>  
                 </ul>  
