--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
             <span>💊</span> BUY ON PUMP.FUN  
         </a>  
 
-        <a href="phantom.com" target="_blank" class="btn-social btn-phantom">
+        <a href="http://phantom.com" target="_blank" class="btn-social btn-phantom">
             <span>👻</span> BUY ON PHANTOM
         </a>
 
