Update status and founder holding percentages

--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
 </head>  
 <body>  <div class="mobile-container">  <nav class="navbar">  
     <div class="nav-brand meme-font">$BKCO</div>  
-    <a href="#" class="btn-status">👑 NOW LIVE</a>  
+    <a href="#" class="btn-status">👑 COMING SOON</a>  
 </nav>  
 
 <section class="hero">  
@@ -365,7 +365,7 @@
         max-width: 90%;
         word-break: break-all;
     ">
-        CA: 8sF...GANTI_DENGAN_CA_ASLI_DISINI...xyz
+        CA: ...Xxxxxxxxxxxxxxxxxx..
     </div>
 
 </div>
@@ -439,7 +439,7 @@
         <div style="background: rgba(255, 255, 255, 0.05); padding: 15px; border-radius: 10px; margin-bottom: 20px;">
             <h4 class="meme-font text-green" style="margin-bottom: 5px;">📊 9% DEV HOLDING</h4>
             <p style="font-size: 13px; color: #9ca3af;">
-                The founder only holds <span class="text-green meme-font" style="font-size: 16px;">9%</span> of the total supply, and the rest is fully distributed to the market and community.
+                The founder only holds <span class="text-green meme-font" style="font-size: 16px;">7%</span> of the total supply, and the rest is fully distributed to the market and community.
             </p>
         </div>
 
