--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
 </head>  
 <body>  <div class="mobile-container">  <nav class="navbar">  
     <div class="nav-brand meme-font">BKCO</div>  
-    <a href="#" class="btn-status">👑 COMING SOON</a>  
+    <a href="#" class="btn-status">👑 BUY NOW </a>  
 </nav>  
 
 <section class="hero">  
