--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <html lang="id">
 <head>
     <meta charset="UTF-8">
@@ -60,15 +59,17 @@
             margin-bottom: 15px;
         }
 
+        /* --- PERUBAHAN LOGO DISINI --- */
         .logo-img {
-            width: 110px;
-            height: 110px;
+            width: 160px;  /* Diperbesar (sebelumnya 110px) */
+            height: 160px; /* Diperbesar (sebelumnya 110px) */
             object-fit: contain;
-            border-radius: 50%;
+            border-radius: 25px; /* Diubah jadi kotak dengan sudut tumpul (sebelumnya 50%) */
             border: 4px solid white;
-            box-shadow: 0 8px 20px rgba(0,0,0,0.15);
+            box-shadow: 0 8px 25px rgba(0,0,0,0.15); /* Shadow sedikit dipertegas */
             background-color: white;
         }
+        /* --------------------------- */
 
         h1 {
             font-family: 'Playfair Display', serif;
